# ini

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  ini.c  ini.h
example/: example.ini  main.c
src/: ini.c  ini.h
tests/: blank_lines.c  fileio.c  fuzzing.c  ini_tests.c  keys.c  pairs.c  queries.c  sections.c  values.c
